--- a/homepage/src/index.css
+++ b/homepage/src/index.css
@@ -1,9 +1,9 @@
 html,
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lora', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   color: var(--color-foreground);
-  font-size: 24px;
+  font-size: 32px;
 }
 
 * {
@@ -24,7 +24,7 @@ body {
 
 section {
   padding: 64px;
-  min-height: 80vh;
+  min-height: 98vh;
   border-bottom: 4px solid currentColor;
   display: flex;
   flex-direction: column;
@@ -33,8 +33,15 @@ section {
   width: 100%;
 }
 
-section > * {
+section > p {
   max-width: 800px;
+}
+
+h1 {
+  font-weight: 600;
+  font-style: italic;
+  font-size: 5rem;
+  text-align: center;
 }
 
 p {
