--- a/homepage/src/index.css
+++ b/homepage/src/index.css
@@ -44,6 +44,12 @@ h1 {
   text-align: center;
 }
 
+@media(max-width: 720px) {
+  body {
+    font-size: 18px;
+  }
+}
+
 p {
   line-height: 1.5;
   text-align: center;
